[workspace.package]
edition = "2021"
authors = ["developers <anonymous@gmail.com>"]
description = "おあそび"


[workspace.dependencies]
rand = "0.8.4"
anyhow = "1.0.66"


[workspace]
members = [
    "./modules/algo",
    "./modules/dp",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "rust_asobi"
version = "0.1.0"
edition.workspace = true


[dependencies]
dp = { path = "./modules/dp" }
algo = { path = "./modules/algo" }


[dev-dependencies]


[features]
